syntax = "proto3";

package credential;

service CredentialService {
  rpc CreateCredential (CreateCredentialRequest) returns (CredentialResponse);
  rpc GetCredential (GetCredentialRequest) returns (CredentialResponse);
  rpc UpdateCredential (UpdateCredentialRequest) returns (CredentialResponse);
  rpc DeleteCredential (DeleteCredentialRequest) returns (DeleteCredentialResponse);
  rpc VerifyCredential (VerifyCredentialRequest) returns (VerifyCredentialResponse);
}

message CreateCredentialRequest {
  int64 userId = 1;
  string password = 2;
  int32 credentialType = 3;
  string ipAddress = 4;
}

message GetCredentialRequest {
  string id = 1;
}

message UpdateCredentialRequest {
  string id = 1;
  string password = 2;
  string ipAddress = 3;
}

message DeleteCredentialRequest {
  string id = 1;
}

message DeleteCredentialResponse {
  bool success = 1;
  string message = 2;
}

message VerifyCredentialRequest {
  int64 userId = 1;
  string password = 2;
}

message VerifyCredentialResponse {
  bool isValid = 1;
  string message = 2;
}

message CredentialResponse {
  string id = 1;
  int64 userId = 2;
  int32 credentialType = 3;
  string ipAddress = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

